# ChangeLog for net-dns/libidn
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/ChangeLog,v 1.116 2010/01/14 04:01:41 jer Exp $

*libidn-1.16 (14 Jan 2010)

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> +libidn-1.16.ebuild:
  Version bump.

  31 Oct 2009; Jeroen Roovers <jer@gentoo.org> -libidn-1.13.ebuild,
  -libidn-1.14.ebuild:
  Remove old.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> libidn-1.15.ebuild:
  Marking libidn-1.15 ppc64 for bug 283653

  07 Oct 2009; nixnut <nixnut@gentoo.org> libidn-1.15.ebuild:
  ppc stable #283653

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org> libidn-1.15.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #283653

  29 Sep 2009; Tobias Klausmann <klausman@gentoo.org> libidn-1.15.ebuild:
  Stable on alpha, bug #283653

  09 Sep 2009; Markus Meier <maekke@gentoo.org> libidn-1.15.ebuild:
  amd64/x86 stable, bug #283653

  07 Sep 2009; Jeroen Roovers <jer@gentoo.org> libidn-1.15.ebuild:
  Stable for HPPA (bug #283653).

  19 Jul 2009; nixnut <nixnut@gentoo.org> libidn-1.14.ebuild:
  ppc stable #273431

  02 Jul 2009; Markus Meier <maekke@gentoo.org> libidn-1.14.ebuild:
  amd64 stable, bug #273431

  30 Jun 2009; Jeroen Roovers <jer@gentoo.org> libidn-1.15.ebuild:
  Add packager information, thanks to mraudsepp for noticing.

  24 Jun 2009; Raúl Porcel <armin76@gentoo.org> libidn-1.14.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #273431

  19 Jun 2009; Brent Baude <ranger@gentoo.org> libidn-1.14.ebuild:
  stable ppc64, bug 273431

  17 Jun 2009; Tobias Klausmann <klausman@gentoo.org> libidn-1.14.ebuild:
  Stable on alpha, bug #273431

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org> libidn-1.14.ebuild:
  stable x86, bug 273431

  09 Jun 2009; Jeroen Roovers <jer@gentoo.org> libidn-1.14.ebuild:
  Stable for HPPA (bug #273431).

*libidn-1.15 (09 Jun 2009)

  09 Jun 2009; Jeroen Roovers <jer@gentoo.org> +libidn-1.15.ebuild:
  Version bump.
