@@ -1,7 +1,9 @@
 AUX 50libidn-gentoo.el 455 RMD160 68a84a8b9aa9ff2b7c6e6b266e2545d2bbb243f2 SHA1 6c986493a8790b67d47444d64ec56b867f644513 SHA256 b8b5a7df3ef312b47ef44d7b5c9180e06e9d8b9cbe43fa67b8511296381ff937
 DIST libidn-1.15.tar.gz 2635155 RMD160 fb02015566838cbd86dda5b74f0da9ef78009b1b SHA1 6321660c7072737110b790044cbf8653a95ea175 SHA256 db75022eff366bd5646ab1e6d7bcd1c2048473a7dbdf0cd0421de92c88bbdc18
 DIST libidn-1.16.tar.gz 2746588 RMD160 100dd4ca6169fa3fbdcc01c042ea9f8f861c548f SHA1 33ff88e7111f07f3bb8aa888fdc7848bb319d4ce SHA256 f7d80facfbad22ff36dcc7c571f510e7b8d8f3e5970ba9c1c384c4f330e4dcff
+DIST libidn-1.18.tar.gz 2975485 RMD160 447391e90fbf3d82ee8da7ed6ba8308e36e09807 SHA1 0b81360368e5100d1ec5261dea58fc72ef39ab6b SHA256 b824ef81319f4ba1a2e49b7208a3ad820a1baa7369e4555b8e45227e5796e77c
 EBUILD libidn-1.15.ebuild 2044 RMD160 53c92b08fd7a30b6c365268ea0e2c41daa645850 SHA1 eab0bf871b2f936e37682b3436bb6ecee481696b SHA256 729a404a416d66b04f50304040da8bcdc270536e8b7c110850087830ccd7ef6a
 EBUILD libidn-1.16.ebuild 2041 RMD160 e2c6aad89e995970fb53edc15c881c772a3d7d47 SHA1 33aec07f12dd81687bc3e50b9325115748c5b36a SHA256 6ad5ac3487f4f0010285d86f57ebea0157e0c0a31c080b7c7ce945c14504f3b1
-MISC ChangeLog 14461 RMD160 d03d6c54acc27d913e104dbe9fd066d1e5090be3 SHA1 49880fadf11398cba0987146b1c3165c196e5fc4 SHA256 d9071110e40de27458fbc3a146b3cb8280b794da6453212e1dfd4cd70a899393
+EBUILD libidn-1.18.ebuild 2041 RMD160 3bae201491c1701024ab5549404a87ccf357a18e SHA1 03cc78b632967ca4dcb4abe7528aeebe9cbdd3b7 SHA256 25eae9ce4bb47b58e1c4a82f588ccf45a1595fb35543d05d9f8e022bdcb014ff
+MISC ChangeLog 14574 RMD160 0c0f8cd075bceef0ac934096706ad460ea8d6a47 SHA1 1a39ae27f85954d69ba7b9e4aacb59fcea70a5e5 SHA256 c3c723b88fae8edf51c02748aba25f377a4468be4e96d1ff43fe8e4fa9d8444e
 MISC metadata.xml 252 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 SHA1 ddd00321e20f4a53a140eeb56cb01b9fab24d657 SHA256 76fd24f00e95b2892ca60acdce02d8c85dfeff84fc89ca14ffdbc00b82de44b3
