@@ -1,0 +1,83 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-dns/libidn/libidn-1.18.ebuild,v 1.1 2010/02/15 22:05:38 jer Exp $
+
+inherit java-pkg-opt-2 mono elisp-common
+
+DESCRIPTION="Internationalized Domain Names (IDN) implementation"
+HOMEPAGE="http://www.gnu.org/software/libidn/"
+SRC_URI="mirror://gnu/libidn/${P}.tar.gz"
+
+LICENSE="LGPL-2.1 GPL-3"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE="doc emacs java mono nls"
+
+COMMON_DEPEND="emacs? ( virtual/emacs )
+	mono? ( >=dev-lang/mono-0.95 )"
+DEPEND="${COMMON_DEPEND}
+	nls? ( >=sys-devel/gettext-0.17 )
+	java? ( >=virtual/jdk-1.4 dev-java/gjdoc )"
+RDEPEND="${COMMON_DEPEND}
+	nls? ( virtual/libintl )
+	java? ( >=virtual/jre-1.4 )"
+
+SITEFILE=50${PN}-gentoo.el
+
+src_unpack() {
+	unpack ${A}
+	# bundled, with wrong bytecode
+	rm "${S}/java/${P}.jar" || die
+}
+
+src_compile() {
+	econf \
+		$(use_enable nls) \
+		$(use_enable java) \
+		$(use_enable mono csharp mono) \
+		--with-lispdir="${EPREFIX}${SITELISP}/${PN}" \
+		--with-packager="Gentoo" \
+		--with-packager-version="r${PR}" \
+		--with-packager-bug-reports="https://bugs.gentoo.org" \
+		|| die
+
+	emake || die
+
+	if use emacs; then
+		elisp-compile src/*.el || die
+	fi
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+	dodoc AUTHORS ChangeLog FAQ NEWS README THANKS TODO || die
+
+	if use emacs; then
+		# *.el are installed by the build system
+		elisp-install ${PN} src/*.elc || die
+		elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
+	else
+		rm -rf "${ED}/usr/share/emacs"
+	fi
+
+	if use doc ; then
+		dohtml -r doc/reference/html/* || die
+	fi
+
+	if use java ; then
+		java-pkg_newjar java/${P}.jar ${PN}.jar || die
+		rm -rf "${ED}"/usr/share/java || die
+
+		if use doc ; then
+			java-pkg_dojavadoc doc/java
+		fi
+	fi
+}
+
+pkg_postinst() {
+	use emacs && elisp-site-regen
+}
+
+pkg_postrm() {
+	use emacs && elisp-site-regen
+}
